xmobar (0.19-1) unstable; urgency=low

  * New upstream version
  * Bump standards-version to 3.9.5
    + No changes needed

 -- Apollon Oikonomopoulos <apoikos@gmail.com>  Mon, 28 Oct 2013 10:25:43 +0200

xmobar (0.18-2) unstable; urgency=low

  * Disable MPRIS & DBus plugins on non-linux platforms. They require
    haskell-dbus which currently works only on Linux. This should fix FTBFS on
    kfreebsd and hurd. (Closes: #718440)
  * Simplify and update README.Debian

 -- Apollon Oikonomopoulos <apoikos@gmail.com>  Thu, 01 Aug 2013 02:56:39 +0300

xmobar (0.18-1) unstable; urgency=low

  * New upstream version
  * Convert debian/copyright format to version 1.0 
  * Build-Depend on libghc-regex-compat
  * Update the watch file to use github

 -- Apollon Oikonomopoulos <apoikos@gmail.com>  Fri, 14 Jun 2013 10:40:25 +0300

xmobar (0.17-1) unstable; urgency=low

  * New upstream version (Closes: #703328)

 -- Apollon Oikonomopoulos <apoikos@gmail.com>  Thu, 23 May 2013 18:41:34 +0300

xmobar (0.16-1) experimental; urgency=low

  * Imported Upstream version 0.16
  * Drop debian/patches
  * Update build-depends and enable MPRIS & DBus plugins
  * Bump standards version to 3.9.4 and compat to 9
  * Update manpage
  * Fix typo in src/Parsers.hs (lintian warning)

 -- Apollon Oikonomopoulos <apoikos@gmail.com>  Thu, 14 Mar 2013 16:58:14 +0200

xmobar (0.14-4) unstable; urgency=low

  * Backport upstream commit 0b1132, fixing coretemp information parsing
    (Closes: #693025)
  * Fix manpage typos

 -- Apollon Oikonomopoulos <apoikos@gmail.com>  Wed, 21 Nov 2012 22:13:55 +0200

xmobar (0.14-3) unstable; urgency=low

  * Backport upstream commit daf28d, fixing FTBFS with STM 2.3 (Closes: #674317)
  * Fix wrong location of battery status file in manpage (Closes: #660168)

 -- Apollon Oikonomopoulos <apoikos@gmail.com>  Thu, 24 May 2012 14:55:45 +0300

xmobar (0.14-2) unstable; urgency=low

  * Backport upstream commit 0964f33. Fixes FTBFS on all non-x86/amd64 arches. 