@@ -1,0 +1,1 @@
+debian/xmobar.1
