@@ -3,6 +3,7 @@ xmobar (0.19-1) unstable; urgency=low
   * New upstream version
   * Bump standards-version to 3.9.5
     + No changes needed
+  * debian/rules: use the dh sequencer
 
  -- Apollon Oikonomopoulos <apoikos@gmail.com>  Mon, 28 Oct 2013 10:25:43 +0200
 
